--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
   <div class="w3-container w3-display-container w3-padding-16">
-    <h3><b>Contents</b></h3>
+    <h3><b><img style="width: 80%;max-width: 80px" alt="profile photo" src="images/Kaiqiang.png"></b></h3>
   </div>
   <div class="w3-padding-64 w3-text-light-grey w3-large" style="font-weight:bold">
     <a href="#biography" class="w3-bar-item w3-button">Biography</a>
@@ -86,7 +86,7 @@
 
 <!-- The Biography Section -->
     <div class="w3-container w3-center w3-padding-64" id="biography">
-      <img style="width: 80%;max-width: 240px" alt="profile photo" src="images/Kaiqiang.jpg">
+      <img style="width: 80%;max-width: 80px" alt="profile photo" src="images/Kaiqiang.png">
       <h1>Kaiqiang Wang</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">
           I am now a postdoctoral researcher in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong (HKU).
