--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
   <div class="w3-container w3-display-container w3-padding-16">
-    <h3><b><img style="width: 80%;max-width: 80px" alt="profile photo" src="images/Kaiqiang.png"></b></h3>
+    <h3><b>
+
+      <img style="width: 80%;max-width: 100px" alt="profile photo" src="images/kaiqiang.png">
+      </h2>Kaiqiang Wang</h2>
+
+    </b></h3>
   </div>
   <div class="w3-padding-64 w3-text-light-grey w3-large" style="font-weight:bold">
     <a href="#biography" class="w3-bar-item w3-button">Biography</a>
@@ -70,7 +75,11 @@
 
 <!-- Top menu on small screens -->
 <header class="w3-bar w3-top w3-hide-large w3-black w3-xlarge">
-  <div class="w3-bar-item w3-padding-24">Contents</div>
+  <div class="w3-bar-item w3-padding-24">
+
+    Contents
+
+  </div>
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding-24 w3-right"  style="font-stretch: extra-expanded;" onclick="w3_open()"><b>≡</b></a>
   </div>
 </header>
@@ -85,24 +94,26 @@
   <div class="w3-hide-large" style="margin-top:83px"></div>
 
 <!-- The Biography Section -->
-    <div class="w3-container w3-center w3-padding-64" id="biography">
-      <img style="width: 80%;max-width: 80px" alt="profile photo" src="images/Kaiqiang.png">
-      <h1>Kaiqiang Wang</h1>
-        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">
+    <div class="w3-container w3-padding-32" id="biography">
+      <h2>Biography</h2>
+        <p class="w3-left-align" style="line-height:200%">
+<!--      <img style="width: 80%;max-width: 80px" alt="profile photo" src="images/kaiqiang.png">-->
+<!--      <h1>Kaiqiang Wang</h1>-->
+<!--        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">-->
           I am now a postdoctoral researcher in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong (HKU).
           Before that, he did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong (CUHK).
           I received my bachelor's degree and PhD in 2016 and 2022, respectively, at Northwestern Polytechnical University (NPU), where he was advised by <a href="https://teacher.nwpu.edu.cn/m/en/1982000067.html">Prof. Jianlin Zhao</a></a>.
           <br><br>I am an enthusiast for computational imaging and deep learning.
         </p>
         <p class="w3-center">
-          <a href="https://github.com/kqwang">Github</a>
+          <br><br><a href="https://github.com/kqwang">Github</a>
         </p>
         </tbody></table>
   </div>
 
 
  <!-- The Publications Section -->
-  <div class="w3-container w3-padding-32" id="publications">
+  <div class="w3-container w3-light-grey w3-padding-32" id="publications">
     <h2>Publications</h2>
       <p class="w3-left-align" style="line-height:200%">
 
@@ -174,7 +185,7 @@
 <!--  </div>-->
 
   <!-- The Awards Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="educations">
+  <div class="w3-container w3-padding-32" id="educations">
     <h2>Educations</h2>
       <li><em>2022</em>, PhD, Northwestern Polytechnical University, Xi'an, China.</li>
       </br>
