--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="w3-container w3-display-container w3-padding-16">
     <h3><b>
 
-      <img style="width: 80%;max-width: 100px" alt="profile photo" src="images/kaiqiang.png">
+      <img style="width: 80%;max-width: 150px" alt="profile photo" src="images/photo.png">
       </h2>Kaiqiang Wang</h2>
 
     </b></h3>
@@ -100,8 +100,8 @@
 <!--      <img style="width: 80%;max-width: 80px" alt="profile photo" src="images/kaiqiang.png">-->
 <!--      <h1>Kaiqiang Wang</h1>-->
 <!--        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">-->
-          I am now a postdoctoral researcher in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong (HKU).
-          Before that, he did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong (CUHK).
+          I am Kaiqiang Wang, now a postdoctoral researcher in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong (HKU).
+          Before that, I did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong (CUHK).
           I received my bachelor's degree and PhD in 2016 and 2022, respectively, at Northwestern Polytechnical University (NPU), where he was advised by <a href="https://teacher.nwpu.edu.cn/m/en/1982000067.html">Prof. Jianlin Zhao</a></a>.
           <br><br>I am an enthusiast for computational imaging and deep learning.
         </p>
