--- a/index.html
+++ b/index.html
@@ -119,64 +119,135 @@
 
       </p>
 
-      <h4> Main Journal Papers:</h4>
-
+      <h4> Journal Papers:</h4>
       <ol>
 
-      <p>
-      <li><a href="https://doi.org/10.1117/1.APN.1.1.014001"><strong>Deep learning spatial phase unwrapping: a comparative review</strong></a>
-      <br>
-      <strong>Kaiqiang Wang</strong>, Qian Kemao, Jianglei Di, Jianlin Zhao
-      <br>
-      <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://www.researching.cn/ArticlePdf/m00105/2022/1/1/014001.pdf">paper</a> | <a style="color: #447ec9" href="https://www.researching.cn/richHtml/APN/2022/1/1/014001/SupplementalData/014001_1.pdf">supplemental information</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a>
-      </p>
+        <p>
+        <li><a href="https://doi.org/10.3389/fphy.2023.1190616"><strong>Real-time phase measurement of optical vortex via digital holography</strong></a>
+        <br>
+        H. Qiu, X. Liu, <strong>K. Wang</strong>, J. Dou, J. Di, and Y. Qin
+        <br>
+        <em>Frontiers in Physics</em> 2023
+        </p>
 
-      <p>
-      <li><a href="https://doi.org/10.1186/s43074-021-00030-4"><strong>Deep learning wavefront sensing and aberration correction in atmospheric turbulence</strong></a>
-      <br>
-      <strong>Kaiqiang Wang</strong>, MengMeng Zhang, Ju Tang, Lingke Wang, Liusen Hu, Xiaoyan Wu, Wei Li, Jianglei Di, Guodong Liu, Jianlin Zhao
-      <br>
-      <em>PhotoniX</em> 2021 | <a style="color: #447ec9" href="https://photonix.springeropen.com/counter/pdf/10.1186/s43074-021-00030-4.pdf?pdf=button%20sticky">paper</a>
-      </p>
+        <p>
+        <li><a href="https://doi.org/10.1117/1.APN.1.1.014001"><strong>Deep learning spatial phase unwrapping: a comparative review</strong></a>
+        <br>
+        <strong>K. Wang</strong>, Q. Kemao, J. Di, and J. Zhao
+        <br>
+        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://www.researching.cn/ArticlePdf/m00105/2022/1/1/014001.pdf">paper</a> | <a style="color: #447ec9" href="https://www.researching.cn/richHtml/APN/2022/1/1/014001/SupplementalData/014001_1.pdf">supplemental information</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a>
+        </p>
 
-      <p>
-      <li><a href="https://doi.org/10.1016/j.optlaseng.2020.106233"><strong>Transport of intensity equation from a single intensity image via deep learning</strong></a>
-      <br>
-      <strong>Kaiqiang Wang</strong>, Jianglei Di, Ying Li, Zhenbo Ren, Qian Kemao, Jianlin Zhao
-      <br>
-      <em>Optics and Lasers in Engineering</em> 2020 | <a style="color: #447ec9" href="/data/2020_OLEN.pdf">paper</a>
-      </p>
+        <p>
+        <li><a href="https://doi.org/10.3389/fphy.2023.1190616"><strong>Light-field focusing and modulation through scattering media based on dual-polarization-encoded digital optical phase conjugation</strong></a>
+        <br>
+        J. Dou, C. Ma, <strong>K. Wang</strong>, J. Di, J. Zhang, and J. Zhao
+        <br>
+        <em>Optics Letters</em> 2022
+        </p>
 
-      <p>
-      <li><a href="https://doi.org/10.1364/OL.395445"><strong>Y4-Net: a deep learning solution to one-shot dual-wavelength digital holographic reconstruction</strong></a>
-      <br>
-      <strong>Kaiqiang Wang</strong>, Qian Kemao, Jianglei Di, Jianlin Zhao
-      <br>
-      <em>Optics Letters</em> 2020 | <a style="color: #447ec9" href="/data/2020_OL.pdf">paper</a>
-      </p>
+        <p>
+        <li><a href="https://doi.org/10.1186/s43074-021-00030-4"><strong>Deep learning wavefront sensing and aberration correction in atmospheric turbulence</strong></a>
+        <br>
+        <strong>K. Wang</strong>, M. Zhang, J. Tang, L. Wang, L. Hu, X. Wu, W. Li, J. Di, G. Liu, and J. Zhao
+        <br>
+        <em>PhotoniX</em> 2021 | <a style="color: #447ec9" href="https://photonix.springeropen.com/counter/pdf/10.1186/s43074-021-00030-4.pdf?pdf=button%20sticky">paper</a>
+        </p>
 
-      <p>
-      <li><a href="https://doi.org/10.1364/OL.44.004765"><strong>Y-Net: a one-to-two deep learning framework for digital holographic reconstruction</strong></a>
-      <br>
-      <strong>Kaiqiang Wang</strong>, Jiazhen Dou, Qian Kemao, Jianglei Di, Jianlin Zhao
-      <br>
-      <em>Optics Letters</em> 2019 | <a style="color: #447ec9" href="/data/2019_OL.pdf">paper</a> | <span style="color:red">Editors' Pick </span>
-      </p>
+        <p>
+        <li><a href="https://doi.org/10.1016/j.optlaseng.2021.106707"><strong>RestoreNet-Plus: Image restoration via deep learning in optical synthetic aperture imaging system</strong></a>
+        <br>
+        J. Tang, J. Wu, <strong>K. Wang</strong>, Z. Ren, X. Wu, L. Hu, J. Di, G. Liu, and J. Zhao
+        <br>
+        <em>Optics and Lasers in Engineering</em> 2021
+        </p>
+
+        <p>
+        <li><a href="https://doi.org/10.1016/j.optlaseng.2020.106463"><strong>RestoreNet: a deep learning framework for image restoration in optical synthetic aperture imaging system</strong></a>
+        <br>
+        J. Tang, <strong>K. Wang</strong>, Z. Ren, W. Zhang, X. Wu, J. Di, G. Liu, and J. Zhao
+        <br>
+        <em>Optics and Lasers in Engineering</em> 2021
+        </p>
 
 
-      <p>
-      <li><a href="https://doi.org/10.1364/OE.27.015100"><strong>One-step robust deep learning phase unwrapping</strong></a>
-      <br>
-      <strong>Kaiqiang Wang</strong>, Ying Li, Qian Kemao, Jianglei Di, Jianlin Zhao
-      <br>
-      <em>Optics express</em> 2019 | <a style="color: #447ec9" href="/data/2019_OE.pdf">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:red">ESI Highly Cited Papers </span>
-      </p>
+
+        <p>
+        <li><a href="http://dx.doi.org/10.3788/LOP202158.1600001"><strong>Research Progress in the Applications of Convolutional Neural Networks in Optical Information Processing</strong></a>
+        <br>
+        J. Di, J. Tang, J. Wu, <strong>K. Wang</strong>, Z. Ren, M. Zhang, and J. Zhao
+        <br>
+        <em>Laser & Optoelectronics Progress</em> 2021
+        </p>
+        <p>
+        <li><a href="https://doi.org/10.3389/fphy.2021.651313"><strong>Quantitative phase imaging using deep learning-based holographic microscope</strong></a>
+        <br>
+        J. Di, J. Wu, <strong>K. Wang</strong>, J. Tang, Y. Li, and J. Zhao
+        <br>
+        <em>Frontiers in Physics</em> 2021
+        </p>
+        <p>
+        <li><a href="https://doi.org/10.1364/AO.404276"><strong>Sparse-view imaging of a fiber internal structure in holographic diffraction tomography via a convolutional neural network</strong></a>
+        <br>
+        J. Di, W. Han, S. Liu, <strong>K. Wang</strong>, J. Tang, and J. Zhao
+        <br>
+        <em>Applied Optics</em> 2021
+        </p>
+
+
+
+
+
+        <p>
+        <li><a href="https://doi.org/10.1016/j.optlaseng.2020.106233"><strong>Transport of intensity equation from a single intensity image via deep learning</strong></a>
+        <br>
+        <strong>K. Wang</strong>, Jianglei Di, Ying Li, Zhenbo Ren, Qian Kemao, Jianlin Zhao
+        <br>
+        <em>Optics and Lasers in Engineering</em> 2020 | <a style="color: #447ec9" href="/data/2020_OLEN.pdf">paper</a>
+        </p>
+
+        <p>
+        <li><a href="https://doi.org/10.1364/OL.395445"><strong>Y4-Net: a deep learning solution to one-shot dual-wavelength digital holographic reconstruction</strong></a>
+        <br>
+        <strong>K. Wang</strong>, Q. Kemao, J. Di, and J. Zhao
+        <br>
+        <em>Optics Letters</em> 2020 | <a style="color: #447ec9" href="/data/2020_OL.pdf">paper</a>
+        </p>
+
+        <p>
+        <li><a href="https://doi.org/10.1364/OL.44.004765"><strong>Y-Net: a one-to-two deep learning framework for digital holographic reconstruction</strong></a>
+        <br>
+        <strong>K. Wang</strong>, J. Dou, Q. Kemao, J. Di, and J. Zhao
+        <br>
+        <em>Optics Letters</em> 2019 | <a style="color: #447ec9" href="/data/2019_OL.pdf">paper</a> | <span style="color:red">Editors' Pick </span>
+        </p>
+
+
+        <p>
+        <li><a href="https://doi.org/10.1364/OE.27.015100"><strong>One-step robust deep learning phase unwrapping</strong></a>
+        <br>
+        <strong>Kaiqiang Wang</strong>, Y. Li, Q. Kemao, J. Di, and J. Zhao
+        <br>
+        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="/data/2019_OE.pdf">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:red">ESI Highly Cited Papers </span>
+        </p>
 
 
       </ol>
 
     </p>
   </div>
+
+<!--10.  K. Wang, Q. Kemao, J. Di, and J. Zhao, "Y4-Net: a deep learning solution to one-shot dual-wavelength digital holographic reconstruction," Optics Letters 45(15), 4220–4223 (2020).-->
+<!--11.  K. Wang, J. Di, Y. Li, Z. Ren, Q. Kemao, and J. Zhao, "Transport of intensity equation from a single intensity image via deep learning," Optics and Lasers in Engineering 134, 106233 (2020).-->
+<!--12.  J. Tang, K. Wang, W. Zhang, and others, "A deep learning-based image restoration method in optical synthetic aperture imaging system," Acta Optica Sinica 40(21), 2111001 (2020).-->
+<!--13.  Y. Li, J. Di, K. Wang, S. Wang, and J. Zhao, "Classification of cell morphology with quantitative phase microscopy and machine learning," Optics Express 28(16), 23916–23927 (2020).-->
+<!--14.  K. Wang, Y. Li, Q. Kemao, J. Di, and J. Zhao, "One-step robust deep learning phase unwrapping," Optics express 27(10), 15100–15115 (2019).-->
+<!--15.  K. Wang, J. Dou, Q. Kemao, J. Di, and J. Zhao, "Y-Net: a one-to-two deep learning framework for digital holographic reconstruction," Optics Letters 44(19), 4765–4768 (2019).-->
+<!--16.  Y. Li, J. Di, C. Ma, J. Zhang, J. Zhong, K. Wang, T. Xi, and J. Zhao, "Quantitative phase microscopy for cellular dynamics based on transport of intensity equation," Optics Express 26(1), 586–593 (2018).-->
+<!--17.  J. Di, K. Wang, J. Zhang, C. Ma, T. Xi, Y. Li, K. Wei, W. Qu, and J. Zhao, "Quasicommon-path digital holographic microscopy with phase aberration compensation based on a long-working distance objective," Optical Engineering 57(2), 024108–024108 (2018).-->
+<!--18.  J. Di, Y. Li, K. Wang, and J. Zhao, "Quantitative and dynamic phase imaging of biological cells by the use of the digital holographic microscopy based on a beam displacer unit," IEEE Photonics Journal 10(4), 1–10 (2018).-->
+<!--19.  J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, K. Wang, and J. Zhao, "Dual-wavelength common-path digital holographic microscopy for quantitative phase imaging of biological cells," Optical Engineering 56(11), 111712–111712 (2017).-->
+
 
 <!--&lt;!&ndash; The Services Section &ndash;&gt;-->
 <!--  <div class="w3-container w3-light-grey w3-padding-32" id="service">-->
