--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 
 
-<body class="w3-content" style="max-width:2000px">
+<body class="w3-content" style="max-width:1000px">
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-collapse w3-top w3-right" style="z-index:3;width:150px" id="mySidebar">
@@ -68,8 +68,8 @@
 <!--    <a href="#projects" class="w3-bar-item w3-button">Projects</a>-->
 <!--    <a href="#talks" class="w3-bar-item w3-button">Talks</a>-->
     <a href="#publications" class="w3-bar-item w3-button">Publications</a>
-<!--    <a href="#services" class="w3-bar-item w3-button">Services</a>-->
     <a href="#educations" class="w3-bar-item w3-button">Educations</a>
+    <a href="#services" class="w3-bar-item w3-button">Services</a>
   </div>
 </nav>
 
@@ -135,7 +135,7 @@
         <br>
         <strong>K. Wang</strong>, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://www.researching.cn/ArticlePdf/m00105/2022/1/1/014001.pdf">paper</a> | <a style="color: #447ec9" href="https://www.researching.cn/richHtml/APN/2022/1/1/014001/SupplementalData/014001_1.pdf">supplemental information</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a>
+        <em>Advanced Photonics Nexus</em> 2022 | <a style="color: #447ec9" href="https://www.researching.cn/ArticlePdf/m00105/2022/1/1/014001.pdf">PDF</a> | <a style="color: #447ec9" href="https://www.researching.cn/richHtml/APN/2022/1/1/014001/SupplementalData/014001_1.pdf">supplemental information</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <a style="color: #447ec9" href="https://www.researching.cn/articles/OJc3ee5c3ec89a4a1a">video</a>
         </p>
 
         <p>
@@ -151,7 +151,7 @@
         <br>
         <strong>K. Wang</strong>, M. Zhang, J. Tang, L. Wang, L. Hu, X. Wu, W. Li, J. Di, G. Liu, and J. Zhao
         <br>
-        <em>PhotoniX</em> 2021 | <a style="color: #447ec9" href="https://photonix.springeropen.com/counter/pdf/10.1186/s43074-021-00030-4.pdf?pdf=button%20sticky">paper</a>
+        <em>PhotoniX</em> 2021 | <a style="color: #447ec9" href="https://photonix.springeropen.com/counter/pdf/10.1186/s43074-021-00030-4.pdf?pdf=button%20sticky">PDF</a>
         </p>
 
         <p>
@@ -170,8 +170,6 @@
         <em>Optics and Lasers in Engineering</em> 2021
         </p>
 
-
-
         <p>
         <li><a href="http://dx.doi.org/10.3788/LOP202158.1600001"><strong>Research Progress in the Applications of Convolutional Neural Networks in Optical Information Processing</strong></a>
         <br>
@@ -179,6 +177,7 @@
         <br>
         <em>Laser & Optoelectronics Progress</em> 2021
         </p>
+
         <p>
         <li><a href="https://doi.org/10.3389/fphy.2021.651313"><strong>Quantitative phase imaging using deep learning-based holographic microscope</strong></a>
         <br>
@@ -186,6 +185,7 @@
         <br>
         <em>Frontiers in Physics</em> 2021
         </p>
+
         <p>
         <li><a href="https://doi.org/10.1364/AO.404276"><strong>Sparse-view imaging of a fiber internal structure in holographic diffraction tomography via a convolutional neural network</strong></a>
         <br>
@@ -194,16 +194,12 @@
         <em>Applied Optics</em> 2021
         </p>
 
-
-
-
-
         <p>
         <li><a href="https://doi.org/10.1016/j.optlaseng.2020.106233"><strong>Transport of intensity equation from a single intensity image via deep learning</strong></a>
         <br>
         <strong>K. Wang</strong>, Jianglei Di, Ying Li, Zhenbo Ren, Qian Kemao, Jianlin Zhao
         <br>
-        <em>Optics and Lasers in Engineering</em> 2020 | <a style="color: #447ec9" href="/data/2020_OLEN.pdf">paper</a>
+        <em>Optics and Lasers in Engineering</em> 2020 | <a style="color: #447ec9" href="/data/2020_OLEN.pdf">PDF</a>
         </p>
 
         <p>
@@ -211,7 +207,24 @@
         <br>
         <strong>K. Wang</strong>, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics Letters</em> 2020 | <a style="color: #447ec9" href="/data/2020_OL.pdf">paper</a>
+        <em>Optics Letters</em> 2020 | <a style="color: #447ec9" href="/data/2020_OL.pdf">PDF</a>
+        </p>
+
+
+        <p>
+        <li><a href="http://dx.doi.org/10.3788/AOS202040.2111001"><strong>A deep learning-based image restoration method in optical synthetic aperture imaging system</strong></a>
+        <br>
+        J. Tang, <strong>K. Wang</strong>, W. Zhang, X. Wu, G. Liu, J. Di, and J. Zhao
+        <br>
+        <em>Acta Optica Sinica</em> 2020
+        </p>
+
+        <p>
+        <li><a href="https://doi.org/10.1364/OE.397029"><strong>Classification of cell morphology with quantitative phase microscopy and machine learning</strong></a>
+        <br>
+        Y. Li, J. Di, <strong>K. Wang</strong>, S. Wang, and J. Zhao
+        <br>
+        <em>Optics Express</em> 2020
         </p>
 
         <p>
@@ -219,34 +232,97 @@
         <br>
         <strong>K. Wang</strong>, J. Dou, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics Letters</em> 2019 | <a style="color: #447ec9" href="/data/2019_OL.pdf">paper</a> | <span style="color:red">Editors' Pick </span>
+        <em>Optics Letters</em> 2019 | <a style="color: #447ec9" href="/data/2019_OL.pdf">PDF</a> | <span style="color:red">Editors' Pick </span>
         </p>
-
 
         <p>
         <li><a href="https://doi.org/10.1364/OE.27.015100"><strong>One-step robust deep learning phase unwrapping</strong></a>
         <br>
-        <strong>Kaiqiang Wang</strong>, Y. Li, Q. Kemao, J. Di, and J. Zhao
+        <strong>K. Wang</strong>, Y. Li, Q. Kemao, J. Di, and J. Zhao
         <br>
-        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="/data/2019_OE.pdf">paper</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:red">ESI Highly Cited Papers </span>
+        <em>Optics express</em> 2019 | <a style="color: #447ec9" href="/data/2019_OE.pdf">PDF</a> | <a style="color: #447ec9" href="https://github.com/kqwang/Phase_unwrapping_by_U-Net">code</a> | <span style="color:red">ESI Highly Cited Papers </span>
         </p>
 
+        <p>
+        <li><a href="https://doi.org/10.1364/OE.26.000586"><strong>Quantitative phase microscopy for cellular dynamics based on transport of intensity equation</strong></a>
+        <br>
+        Y. Li, J. Di, C. Ma, J. Zhang, J. Zhong, <strong>K. Wang</strong>, T. Xi, and J. Zhao
+        <br>
+        <em>Optics Express</em> 2018
+        </p>
+
+        <p>
+        <li><a href="https://doi.org/10.1117/1.OE.57.2.024108"><strong>Quasicommon-path digital holographic microscopy with phase aberration compensation based on a long-working distance objective</strong></a>
+        <br>
+        J. Di, <strong>K. Wang</strong>, J. Zhang, C. Ma, T. Xi, Y. Li, K. Wei, W. Qu, and J. Zhao
+        <br>
+        <em>Optical Engineering</em> 2018
+        </p>
+
+        <p>
+        <li><a href="https://doi.org/10.1109/JPHOT.2018.2839878"><strong>Quantitative and dynamic phase imaging of biological cells by the use of the digital holographic microscopy based on a beam displacer unit</strong></a>
+        <br>
+        J. Di, Y. Li, <strong>K. Wang</strong>, and J. Zhao
+        <br>
+        <em>IEEE Photonics Journal</em> 2018
+        </p>
+
+        <p>
+        <li><a href="https://doi.org/10.1117/1.OE.56.11.111712"><strong>Dual-wavelength common-path digital holographic microscopy for quantitative phase imaging of biological cells</strong></a>
+        <br>
+        J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, <strong>K. Wang</strong>, and J. Zhao
+        <br>
+        <em>Optical Engineering</em> 2017
+        </p>
 
       </ol>
 
+      <h4> Conference Papers:</h4>
+      <ol>
+        <p>
+        <li><a href="https://doi.org/10.1117/12.2576299"><strong>RestoreNet: a deep learning framework for image restoration in optical multi-aperture imaging system</strong></a>
+        <br>
+        J. Tang, <strong>K. Wang</strong>, X. Wu, J. Di, G. Liu, and J. Zhao
+        <br>
+        in Optics Frontier Online 2020: Optics Imaging and Display (SPIE, 2020), 11571, pp. 19–25.
+        </p>
+
+        <p>
+        <li><a href="https://doi.org/10.1117/12.2573707"><strong>Deep learning in computational imaging</strong></a>
+        <br>
+        J. Di, <strong>K. Wang</strong>, and J. Zhao
+        <br>
+        in Holography, Diffractive Optics, and Applications X (SPIE, 2020), 11551, p. 1155107.
+        </p>
+
+        <p>
+        <li><a href="https://doi.org/10.1364/DH.2020.HTu4B.2"><strong>Deep learning-based holographic reconstruction in digital holography</strong></a>
+        <br>
+        J. Di, <strong>K. Wang</strong>, Y. Li, and J. Zhao
+        <br>
+        in Digital Holography and Three-Dimensional Imaging (Optica Publishing Group, 2020), pp. HTu4B-2.
+        </p>
+
+        <p>
+        <li><a href="https://doi.org/10.1117/12.2289324"><strong>Common-path digital holographic microscopy based on a beam displacer unit</strong></a>
+        <br>
+        J. Di, J. Zhang, Y. Song, <strong>K. Wang</strong>, K. Wei, and J. Zhao
+        <br>
+        in Quantitative Phase Imaging IV (SPIE, 2018), 10503, pp. 208–211.
+        </p>
+
+        <p>
+        <li><a href="https://doi.org/10.1117/12.2270774"><strong>Improvement of phase measurement accuracy and stability in dual-wavelength common-path digital holographic microscopy</strong></a>
+        <br>
+        J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, <strong>K. Wang</strong>, and J. Zhao
+        <br>
+        in Fifth International Conference on Optical and Photonics Engineering (SPIE, 2017), 10449, pp. 349–354.
+        </p>
+
+      </ol>
     </p>
   </div>
 
-<!--10.  K. Wang, Q. Kemao, J. Di, and J. Zhao, "Y4-Net: a deep learning solution to one-shot dual-wavelength digital holographic reconstruction," Optics Letters 45(15), 4220–4223 (2020).-->
-<!--11.  K. Wang, J. Di, Y. Li, Z. Ren, Q. Kemao, and J. Zhao, "Transport of intensity equation from a single intensity image via deep learning," Optics and Lasers in Engineering 134, 106233 (2020).-->
-<!--12.  J. Tang, K. Wang, W. Zhang, and others, "A deep learning-based image restoration method in optical synthetic aperture imaging system," Acta Optica Sinica 40(21), 2111001 (2020).-->
-<!--13.  Y. Li, J. Di, K. Wang, S. Wang, and J. Zhao, "Classification of cell morphology with quantitative phase microscopy and machine learning," Optics Express 28(16), 23916–23927 (2020).-->
-<!--14.  K. Wang, Y. Li, Q. Kemao, J. Di, and J. Zhao, "One-step robust deep learning phase unwrapping," Optics express 27(10), 15100–15115 (2019).-->
-<!--15.  K. Wang, J. Dou, Q. Kemao, J. Di, and J. Zhao, "Y-Net: a one-to-two deep learning framework for digital holographic reconstruction," Optics Letters 44(19), 4765–4768 (2019).-->
-<!--16.  Y. Li, J. Di, C. Ma, J. Zhang, J. Zhong, K. Wang, T. Xi, and J. Zhao, "Quantitative phase microscopy for cellular dynamics based on transport of intensity equation," Optics Express 26(1), 586–593 (2018).-->
-<!--17.  J. Di, K. Wang, J. Zhang, C. Ma, T. Xi, Y. Li, K. Wei, W. Qu, and J. Zhao, "Quasicommon-path digital holographic microscopy with phase aberration compensation based on a long-working distance objective," Optical Engineering 57(2), 024108–024108 (2018).-->
-<!--18.  J. Di, Y. Li, K. Wang, and J. Zhao, "Quantitative and dynamic phase imaging of biological cells by the use of the digital holographic microscopy based on a beam displacer unit," IEEE Photonics Journal 10(4), 1–10 (2018).-->
-<!--19.  J. Di, Y. Song, T. Xi, J. Zhang, Y. Li, C. Ma, K. Wang, and J. Zhao, "Dual-wavelength common-path digital holographic microscopy for quantitative phase imaging of biological cells," Optical Engineering 56(11), 111712–111712 (2017).-->
 
 
 <!--&lt;!&ndash; The Services Section &ndash;&gt;-->
@@ -261,6 +337,12 @@
       <li><em>2022</em>, PhD, Northwestern Polytechnical University, Xi'an, China.</li>
       </br>
       <li><em>2016</em>, BSc, Northwestern Polytechnical University, Xi'an, China.</li>
+  </div>
+
+<!-- The Services Section -->
+  <div class="w3-container w3-light-grey w3-padding-32" id="services">
+    <h2>Services</h2>
+      <p><li> Journal Reviewers of Applied Optics, Frontiers in Physics, Journal of the Optical Society of America A, Light: Science & Applications, Optics Communications, Optics Continuum, Optics Express, Optics and Lasers in Engineering, IEEE Photonics Technology Letters.
   </div>
 
 
