--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="w3-container w3-display-container w3-padding-16">
     <h3><b>
 
-      <img style="width: 80%;max-width: 150px" alt="profile photo" src="images/hoto.png">
+      <img style="width: 80%;max-width: 150px" alt="profile photo" src="images/photo.png">
       </h2>Kaiqiang Wang</h2>
 
     </b></h3>
