--- a/index.html
+++ b/index.html
@@ -100,11 +100,12 @@
 <!--      <img style="width: 80%;max-width: 80px" alt="profile photo" src="images/kaiqiang.png">-->
 <!--      <h1>Kaiqiang Wang</h1>-->
 <!--        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">-->
-          I am Kaiqiang Wang, now a postdoctoral researcher in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong (HKU).
+          I am <strong>Kaiqiang Wang</strong>, now a postdoctoral researcher in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong (HKU).
           Before that, I did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong (CUHK).
           I received my bachelor's degree and PhD in 2016 and 2022, respectively, at Northwestern Polytechnical University (NPU), where he was advised by <a href="https://teacher.nwpu.edu.cn/m/en/1982000067.html">Prof. Jianlin Zhao</a></a>.
-          <br><br>I am an enthusiast for computational imaging and deep learning.
+          <br><br>I am an enthusiast for <strong>computational imaging</strong> and <strong>deep learning</strong>.
         </p>
+
         <p class="w3-center">
           <br><br><a href="https://github.com/kqwang">Github</a>
         </p>
@@ -334,9 +335,18 @@
   <!-- The Awards Section -->
   <div class="w3-container w3-padding-32" id="educations">
     <h2>Educations</h2>
-      <li><em>2022</em>, PhD, Northwestern Polytechnical University, Xi'an, China.</li>
-      </br>
-      <li><em>2016</em>, BSc, Northwestern Polytechnical University, Xi'an, China.</li>
+      <p>
+      <li><em>2016-2022</em>, PhD, Northwestern Polytechnical University, Xi'an, China.
+      <br>
+      Major: Optical Engineering
+      </p>
+
+
+      <li><em>2012-2016</em>, BSc, Northwestern Polytechnical University, Xi'an, China.
+      <br>
+      Major: Applied Physics
+      </p>
+      </li>
   </div>
 
 <!-- The Services Section -->
