--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <div class="w3-main" style="margin-left:150px">
 
   <!-- Push down content on small screens -->
-  <div class="w3-hide-large" style="margin-top:83px"></div>
+  <div class="w3-hide-large" style="margin-top:80px"></div>
 
 <!-- The Biography Section -->
     <div class="w3-container w3-padding-32" id="biography">
@@ -356,32 +356,26 @@
   </div>
 
 
- <!-- Default Statcounter code for https://kqwang.github.io/
-https://kqwang.github.io/ -->
 
-<noscript><div class="statcounter"><a title="website
-statistics" href="https://statcounter.com/"
+<!-- Default Statcounter code for https://kqwang.github.io/
+https://kqwang.github.io/ -->
+<script type="text/javascript">
+var sc_project=12887075;
+var sc_invisible=1;
+var sc_security="6599b468";
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><a title="Web Analytics
+Made Easy - Statcounter" href="https://statcounter.com/"
 target="_blank"><img class="statcounter"
-src="https://c.statcounter.com/12887075/0/6599b468/0/"
-alt="website statistics"
+src="https://c.statcounter.com/12887075/0/6599b468/1/"
+alt="Web Analytics Made Easy - Statcounter"
 referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
 <!-- End of Statcounter Code -->
 
-      <br>
-      <p align="center"> Pageviews:
-      <script type="text/javascript">
-      var sc_project=12887075;
-      var sc_invisible=0;
-      var sc_security="6599b468";
-      var scJsHost = "https://";
-      document.write("<sc"+"ript type='text/javascript' src='" +
-      scJsHost+
-      "statcounter.com/counter/counter.js'></"+"script>");
-      </script>
-
-
-
-  <!-- End page content -->
+<!-- End page content -->
 
 
 <script>
