--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 <!-- The Services Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="services">
     <h2>Services</h2>
-    <h4> Journal Reviewers:</h4>
+    <h4> Journal Reviewer: </h4>
     Applied Optics, Frontiers in Physics, Journal of the Optical Society of America A, Light: Science & Applications, Optics Communications, Optics Continuum, Optics Express, Optics and Lasers in Engineering, IEEE Photonics Technology Letters.
   </div>
 
