--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 <!--    <a href="#news" class="w3-bar-item w3-button">News</a>-->
 <!--    <a href="#projects" class="w3-bar-item w3-button">Projects</a>-->
 <!--    <a href="#talks" class="w3-bar-item w3-button">Talks</a>-->
-    <a href="#publications" class="w3-bar-item w3-button">Publications</a>
     <a href="#educations" class="w3-bar-item w3-button">Educations</a>
+    <a href="#publications" class="w3-bar-item w3-button">Publications</a>
     <a href="#services" class="w3-bar-item w3-button">Services</a>
+    <a href="#resources" class="w3-bar-item w3-button">Resources</a>
   </div>
 </nav>
 
@@ -113,8 +114,26 @@
   </div>
 
 
+    <!-- The Educations Section -->
+  <div class="w3-container w3-light-grey w3-padding-32" id="educations">
+    <h2>Educations</h2>
+      <p>
+      <li><em>2016-2022</em>, PhD, Northwestern Polytechnical University, Xi'an, China.
+      <br>
+      Major: Optical Engineering
+      </p>
+
+
+      <li><em>2012-2016</em>, BSc, Northwestern Polytechnical University, Xi'an, China.
+      <br>
+      Major: Applied Physics
+      </p>
+      </li>
+  </div>
+
+
  <!-- The Publications Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="publications">
+  <div class="w3-container w3-padding-32" id="publications">
     <h2>Publications</h2>
       <p class="w3-left-align" style="line-height:200%">
 
@@ -332,22 +351,7 @@
 <!--      <p><li> </p>-->
 <!--  </div>-->
 
-  <!-- The Awards Section -->
-  <div class="w3-container w3-padding-32" id="educations">
-    <h2>Educations</h2>
-      <p>
-      <li><em>2016-2022</em>, PhD, Northwestern Polytechnical University, Xi'an, China.
-      <br>
-      Major: Optical Engineering
-      </p>
 
-
-      <li><em>2012-2016</em>, BSc, Northwestern Polytechnical University, Xi'an, China.
-      <br>
-      Major: Applied Physics
-      </p>
-      </li>
-  </div>
 
 <!-- The Services Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="services">
@@ -356,7 +360,14 @@
     Applied Optics, Frontiers in Physics, Journal of the Optical Society of America A, Light: Science & Applications, Optics Communications, Optics Continuum, Optics Express, Optics and Lasers in Engineering, IEEE Photonics Technology Letters.
   </div>
 
-
+    <!-- The Resources Section -->
+  <div class="w3-container w3-padding-32" id="resources">
+    <h2>Resources</h2>
+      <p>
+      In doing.
+      </p>
+      </li>
+  </div>
 
 <!-- Default Statcounter code for https://kqwang.github.io/
 https://kqwang.github.io/ -->
