--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 <!--        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">-->
           I am <strong>Kaiqiang Wang</strong>, now a postdoctoral researcher in the Lab of <a href="https://www.eee.hku.hk/~elam/">Prof. Edmund Y. Lam</a> at the University of Hong Kong (HKU).
           Before that, I did postdoctoral research in the Lab of <a href="https://www.lambcuhk.org/">Prof. Renjie Zhou</a> at the Chinese University of Hong Kong (CUHK).
-          I received my bachelor's degree and PhD in 2016 and 2022, respectively, at Northwestern Polytechnical University (NPU), where he was advised by <a href="https://teacher.nwpu.edu.cn/m/en/1982000067.html">Prof. Jianlin Zhao</a></a>.
+          I received my PhD at Northwestern Polytechnical University (NPU), where I was advised by <a href="https://teacher.nwpu.edu.cn/m/en/1982000067.html">Prof. Jianlin Zhao</a></a>.
           <br><br>I am an enthusiast for <strong>computational imaging</strong> and <strong>deep learning</strong>.
         </p>
 
