--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 <!--    <a href="#projects" class="w3-bar-item w3-button">Projects</a>-->
 <!--    <a href="#talks" class="w3-bar-item w3-button">Talks</a>-->
     <a href="#educations" class="w3-bar-item w3-button">Educations</a>
+    <a href="#awards" class="w3-bar-item w3-button">Awards</a>
     <a href="#publications" class="w3-bar-item w3-button">Publications</a>
     <a href="#services" class="w3-bar-item w3-button">Services</a>
     <a href="#resources" class="w3-bar-item w3-button">Resources</a>
@@ -128,12 +129,27 @@
       <br>
       Major: Applied Physics
       </p>
+
+      <li><em>2009-2012</em>, Meixian High school, Shaanxi province, China.
+      <br>
+
+      </p>
+      </li>
+  </div>
+
+      <!-- The awards Section -->
+  <div class="w3-container w3-padding-32" id="awards">
+    <h2>Awards</h2>
+      <p>
+      <li>During my student period, I was awarded the <em>Three Good Student</em> and the <em>Excellent Young Pioneer</em> many times.
+
+      </p>
       </li>
   </div>
 
 
  <!-- The Publications Section -->
-  <div class="w3-container w3-padding-32" id="publications">
+  <div class="w3-container w3-light-grey w3-padding-32" id="publications">
     <h2>Publications</h2>
       <p class="w3-left-align" style="line-height:200%">
 
@@ -354,14 +370,14 @@
 
 
 <!-- The Services Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="services">
+  <div class="w3-container w3-padding-32" id="services">
     <h2>Services</h2>
     <h4> Journal Reviewer: </h4>
     Applied Optics, Frontiers in Physics, Journal of the Optical Society of America A, Light: Science & Applications, Optics Communications, Optics Continuum, Optics Express, Optics and Lasers in Engineering, IEEE Photonics Technology Letters.
   </div>
 
     <!-- The Resources Section -->
-  <div class="w3-container w3-padding-32" id="resources">
+  <div class="w3-container w3-light-grey w3-padding-32" id="resources">
     <h2>Resources</h2>
       <p>
       In doing.
